<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="launchIntro"
            android:text="@string/startGame" />

        <Button
            android:id="@+id/scoreButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/viewHighscore" />

        <Button
            android:id="@+id/introButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="launchIntro"
            android:text="@string/watchIntro" />

        <Button
            android:id="@+id/controlsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/controls" />

        <Button
            android:id="@+id/quitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quit" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
